Change background image for faster loading effect

--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ font-family: 'Open Sans', sans-serif;
     background: #000046;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: url('../media/bg.png') no-repeat;
+    background: url('../media/bg.jpg') no-repeat;
     
     top: 50%;
     left: 50%;
