Added survey images

--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -54,3 +54,15 @@ toggle {  0% {
  opacity: 1;
 }
 }
+
+.surveyImage{
+    width: 160px;
+    height: 160px;
+    border-radius: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
