--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,10 @@ Other things I would require:
 6.Documents for T&C, Privacy Policy, etc.
 */
 @font-face {
+    font-family: AndaleMono;
+    src: url(../fonts/Andale-Mono/AndaleMono.ttf);
+}
+@font-face {
     font-family: GothamBold;
     src: url(../fonts/GothamBold/GothamBold.ttf);
 }
@@ -18,10 +22,6 @@ Other things I would require:
 @font-face {
     font-family: GothamLight;
     src: url(../fonts/GothamLight/GothamLight.ttf);
-}
-@font-face {
-    font-family: AndaleMono;
-    src: url(../fonts/Andale-Mono/AndaleMono.ttf);
 }
 :root{
 	--mblue: #0038A8;
@@ -34,10 +34,20 @@ Other things I would require:
 	--mfeatureheading: #19164d;
 	--background-color: #fff;
 }
-.loader{
-
+.hameid-loader-overlay {
+    width: 100%;
+    height: 100%;
+    background: url('../media/preloader.gif') center no-repeat #fff;
+    z-index: 99999;
+    position: fixed;
 }
-
+.logoLoader{
+	padding-bottom: 200px;
+	font-family: AndaleMono;
+	font-size: 2rem;
+	font-weight: bold;
+	color: #0000ff;
+}
 body{
 	font-family: 'Open Sans', sans-serif;
 	overflow-x:hidden;
