--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ Other things I would require:
     position: fixed;
 }
 .logoLoader{
+	display: none;
 	padding-bottom: 200px;
 	font-family: AndaleMono;
 	font-size: 2.5rem;
