--- a/css/index.css
+++ b/css/index.css
@@ -587,7 +587,7 @@ background: linear-gradient(to left, #141e30, #243b55); /* W3C, IE 10+/ Edge, Fi
 	background-attachment: fixed;
 }
 @media(min-width: 992px){
-	#Prakash{
+		Prakash{
 	margin-top:0px
 	}
 }
@@ -894,6 +894,62 @@ background: linear-gradient(to left, #141e30, #243b55); /* W3C, IE 10+/ Edge, Fi
 }
 .percentage{
 	font-size: 22px;
+}
+
+#contact{
+	background-color: #E4E8E9;
+}
+.my-form{
+	width: 100%;
+    margin: 0 0 20px;
+    padding: 15px 12px;
+    border: 0;
+    border-radius: 0;
+    outline: 0;
+    resize: none;
+    font-size: 13px;
+    line-height: 17px;
+    background-color: #fff;
+    color: #818181;
+    font-family: Raleway, serif;
+    font-weight: 400;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none
+}
+.contactFormContainer{
+	color:var(--mblue4);
+	font-size: x-large;
+	padding-top:0px;
+	text-align: center;
+	margin-top:20px;
+	margin-bottom: 50px;
+}
+.contactForm{
+	border-style: solid;
+	color:var(--mblue4);
+	border-color: var(--mblue4);
+	border-bottom-left-radius: 10000px;
+	border-top-right-radius: 10000px;
+	border-bottom-right-radius: 10000px;
+	margin: 0px;
+	padding: 8px;
+	padding-left: 75px;
+	padding-right: 75px;
+	cursor: pointer;
+	background-color: rgba(255, 255, 255, 0.1);
+	text-decoration: none;
+}
+.contactForm:hover{
+	background-color:var(--mblue4);
+	color:white;
+	text-decoration: none;
+}
+#thankyou_message{
+	display:none;
+	margin-bottom: 50px;
+	text-align: center;
 }
 #footer{
 	background-color: var(--mdarkbackground);
