--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,9 @@ Other things I would require:
 	--mfeatureheading: #19164d;
 	--background-color: #fff;
 }
+html{
+	height:100%;
+}
 .hameid-loader-overlay {
     width: 100%;
     height: 100vh;
@@ -189,7 +192,8 @@ nav, .navbar{
 	padding-top: 0px;
 }
 .navbar-brand{
-	margin-right: 10rem;
+	margin: auto;
+    width: 50%;
 }
 .navbar-toggler-icon{
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
@@ -790,7 +794,7 @@ background: linear-gradient(to left, #141e30, #243b55); /* W3C, IE 10+/ Edge, Fi
 		padding: 20px;
 	}
 	.featuredElement > a > img{
-		top : 0px;
+		top : 0px !important;
 		bottom: 0px;
 	}
 }
